폰트 어썸 수정

--- a/Projects/prj03home/templates/base.html
+++ b/Projects/prj03home/templates/base.html
@@ -16,6 +16,10 @@
     {% endblock %}
     {% block extra_css %}
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap'); 
+        body {
+            font-family: 'Noto Sans KR', sans-serif;
+        }
         :root {
             --font-family: "Noto Sans KR", sans-serif;
             --font-weight-light: 300;
